9 October 2023
Minor fix of indentation algorithm.

27 September 2023
numbercheck: Accept hexadecimal floating point notation: chars a-f A-F.

26 September 2023
numbercheck: Accept fixed point notation having more than one digits before
the dot.

25 September 2023
UFP: Passing value that cannot be represented as a double results in failure.
Handle errors in consistent way; err$ can redirect or silence error messages.
Documented err$ function.

24 September 2023
Further debugged and improved export of double values from UFP.
Export as integer not limited to range INT64_MIN < val <= INT64_MAX

22 September 2023
Fixed bug in export from UFP object of double as fraction ('Q' option).
This did not handle integer values correctly.

11 September 2023
In UFP object, renamed 'range' to 'extent'.

5 September 2023
Using int64_t (C99: stdint.h, inttypes.h) to cast double to integer and convert
double to a rational number in decimal notation. Also used in subroot(), x2d
and d2x. The 32-bit version uses int64_t as well.
Removed the whitespace behind the result of exporting from a UFP object in `Q'
format. (There was no good reason to have that whitespace.)

29 August 2023
From today, bracmat.c is no longer the primary source code for further development.
Instead, bracmat.c is moved to a new folder, `singlesource', while the old `src'
folder contains `potu.c' and many other .c and .h files, neatly organized in
functional modules. These are the files that will be manually maintained in the
future. The file singlesource/bracmat.c is more or less a concatenation of all
source files in `src', minus repetitions and minus the majority of function
declarations.
New in the `doc' folder is `bracmat.pdf', which is created from `bracmat.tex' 
(not in this repo), which, in turn, is created from `bracmat.html', which is
created by running `get$help' in the Bracmat CLI and choosing the menu item
`htmllatex'. The conversion from Latex to PDF was done by TeXstudio